--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>חנות נרות מעוצבים</title>
+    <title>BS Candle</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: linear-gradient(45deg, #ff9a9e, #fad0c4); margin: 0; padding: 0; }
         .container { max-width: 1000px; margin: auto; padding: 20px; }
@@ -20,7 +20,7 @@
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
         .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
-        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 15px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; height: 300px;  overflow-y: auto; transition: all 0.3s ease; z-index: 1000; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 15px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; height: 300px;  overflow-y: auto; transition: all 0.3s ease; z-index: 1000;}
         .cart-item { display: flex; align-items: center; margin-bottom: 10px; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
         .resize-button { background-color: #007bff; color: white; border: none; padding: 8px 12px; font-size: 1em; cursor: pointer; border-radius: 5px; margin-top: 10px; }
@@ -101,7 +101,7 @@
             let total = 0; // אתחול משתנה סכום
 
             cart.forEach(item => {
-                message += `🔹 ${item.name} - ${item.price} ש"ח%0A`;
+                message += `🕯️ ${item.name} - ${item.price} ש"ח%0A`;
                 total += parseFloat(item.price); // המר מחרוזת למספר והוסף לסכום
             });
 
@@ -138,25 +138,76 @@
     </script>
 </head>
 <body>
+    <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+        <img src="img/Back.jpg" style="width: 100%; height: 100%; object-fit: cover;">
+      </div>      
     <div class="header">
         <img src="https://yourwebsite.com/logo.png" alt="לוגו" class="logo">
     </div>
     <div class="container">
-        <h1 style="color: white; font-size: 1.8em;">ברוכים הבאים לחנות הנרות שלנו</h1>
+        <h1 style="color: white; font-size: 1.8em;">BS Candle</h1>
+        <h5 style="color: white; font-size: 1.1em;">נרות ייחודיים בעבודת יד בעיצובים מרהיבים ובהתאמה אישית לכל אירוע ולכל סגנון</h5>
         <div class="category">
-            <h2>קטגוריה 1</h2>
             <div class="products">
                 <div class="product">
-                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 1" onclick="openModal(this.src)">
-                    <h2>נר מעוצב 1</h2>
-                    <p>מחיר: 50 ש"ח</p>
-                    <button class="cart-button" onclick="addToCart('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png', '50')">+</button>
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="פרח לוטוס בצבע חום" onclick="openModal(this.src)">
+                    <h2>לוטוס</h2>
+                    <p>מחיר: 40 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('פרח לוטוס ריחני בצבע חום', 'https://pc-f1x.github.io/Candle/candle.png', '40')">בחר</button>
                 </div>
                 <div class="product">
-                    <img src="https://yourwebsite.com/images/candle2.jpg" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 2" onclick="openModal(this.src)">
                     <h2>נר מעוצב 2</h2>
                     <p>מחיר: 60 ש"ח</p>
-                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg', '60')">+</button>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://pc-f1x.github.io/Candle/candle.png', '60')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="פרח לוטוס בצבע חום" onclick="openModal(this.src)">
+                    <h2>לוטוס</h2>
+                    <p>מחיר: 40 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('פרח לוטוס ריחני בצבע חום', 'https://pc-f1x.github.io/Candle/candle.png', '40')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 2</h2>
+                    <p>מחיר: 60 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://pc-f1x.github.io/Candle/candle.png', '60')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="פרח לוטוס בצבע חום" onclick="openModal(this.src)">
+                    <h2>לוטוס</h2>
+                    <p>מחיר: 40 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('פרח לוטוס ריחני בצבע חום', 'https://pc-f1x.github.io/Candle/candle.png', '40')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 2</h2>
+                    <p>מחיר: 60 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://pc-f1x.github.io/Candle/candle.png', '60')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="פרח לוטוס בצבע חום" onclick="openModal(this.src)">
+                    <h2>לוטוס</h2>
+                    <p>מחיר: 40 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('פרח לוטוס ריחני בצבע חום', 'https://pc-f1x.github.io/Candle/candle.png', '40')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 2</h2>
+                    <p>מחיר: 60 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://pc-f1x.github.io/Candle/candle.png', '60')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="פרח לוטוס בצבע חום" onclick="openModal(this.src)">
+                    <h2>לוטוס</h2>
+                    <p>מחיר: 40 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('פרח לוטוס ריחני בצבע חום', 'https://pc-f1x.github.io/Candle/candle.png', '40')">בחר</button>
+                </div>
+                <div class="product">
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 2</h2>
+                    <p>מחיר: 60 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://pc-f1x.github.io/Candle/candle.png', '60')">בחר</button>
                 </div>
             </div>
         </div>
@@ -174,7 +225,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>© 2025 חנות נרות מעוצבים | כל הזכויות שמורות</p>
+        <p>© 2025 PC-FIX חנות נרות מעוצבים | כל הזכויות שמורות</p>
     </div>
 </body>
 </html>
